--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ nav ul li a:hover::after{
 }
 
 /*-- --------------services------------------- --*/
-services{
+.services{
     padding: 30px 0;
 }
 
@@ -219,7 +219,7 @@ services{
     overflow: hidden;
 }
 
-work img{
+.work img{
     width: 100%;
     border-radius: 10px;
     display: block;
